<resources>
    <string name="app_name">OSCDisplay</string>
    <string name="template_waiting" formatted="false">
        <![CDATA[
            <html>
            <head>
            <style type="text/css">
            #text{
            font-size:28;
            text-align: center;
            line-height: normal;
            color:#BBBBBB;
            margin:auto;
            }
            #top {
            height: 33%
            }
            </style>
            </head>
            <body>
            <div id="top">&nbsp;</div>
            <p id="text">Waiting for OSC message</p>
            </body>
            </html>
        ]]>
    </string>
    <string name="template_debug" formatted="false">
        <![CDATA[<html>
        <head>
        <style>
            #argsDiv { display: none; }
            #emptyDiv { display: none; }
        </style>
        <script>
        function showMessage() {
            document.getElementById(\'path\').textContent = Message.address();
            document.getElementById(\'time\').textContent = Message.time();
            var count = Message.numArgs();
            if(count > 0) {
                document.getElementById(\'numArgs\').textContent = count;
                document.getElementById(\'argsDiv\').style.display = \'block\';
                var argsList = document.getElementById(\'argsList\');
                for(var i = 0; i < count; i++) {
                    argsList.innerHTML += \'<li>\' + Message.arg(i) + \'</li>\';
                }
            } else {
                document.getElementById(\'emptyDiv\').style.display = \'block\';
            }
        }
        window.onload=showMessage;
        </script>
        </head>
            <body><b><span id="path"></span></b><br />
                received <span id="time"></span><br/>
                <div id="argsDiv">
                <span id="numArgs">&nbsp</span> arguments:
                <ul id="argsList"></ul>
                </div>
                <div id="emptyDiv">
                 (No arguments)
                </div>
            </body>
        </html>]]>
    </string>
    <string name="template_song" formatted="false">
        <![CDATA[
        <html>
        <head>
        <style type="text/css">
        #song { height: 20%; color: blue; font-size: 8vw; }
        #part { height: 20%; color: green; font-size: 8vw;}
        #counter { float: right; padding-right: 45vw; }
        #next { height: 15%; color: blue; font-size: 5vw;}
        #message { color: red; font-size: 5vw; }
        </style>
        <script>
        function update() {
            var path = Message.address();
            if(path === \'/song/bar\') {
                var songDiv = document.getElementById(\'song\');
                songDiv.textContent = Message.arg(0);
                var current = document.getElementById(\'current\');
                current.textContent = Message.arg(1);
                var count = document.getElementById(\'count\');
                var countArg = Message.arg(2);
                count.textContent = countArg;
                var length = document.getElementById(\'length\');
                var lenArg = Message.arg(3);
                length.textContent = lenArg;
                var counter = document.getElementById(\'counter\');
                var countColor = (lenArg - countArg < 3) ? \'red\' : \'green\';
                counter.style.color = countColor;
                var next = document.getElementById(\'nextPart\');
                next.textContent = Message.arg(4);
            } else if(path === \'/song/message\') {
                var message = document.getElementById(\'message\');
                message.textContent = Message.arg(0);
                setTimeout(function() {
                    message.textContent = \'\';
                }, 5000);
            }
        }
        window.onload=update;
        </script>
        </head>
        <body>
        <div id="song"></div>
        <div id="part">
            <span id="current"></span>
            <span id="counter">
                <span id="count"></span>/<span id="length"></span>
            </span>
        </div>
        <div id="next">Next: <span id="nextPart"></span></div>
        <div id="message"></div>
        </body>
        </html>
        ]]>
    </string>
    <string name="menu_settings">settings</string>
    <string name="title_activity_settings">Settings</string>
    12
    <string name="pref_header_network">Network</string>
    <string name="pref_header_templates">Templates</string>
    <string name="pref_header_addresses">Addresses</string>

    <string name="pref_title_port">Port number</string>
    <string name="pref_default_port">9000</string>
    <string name="pref_title_multicast_on">Multicast Enabled</string>
    <string name="pref_title_multicast_ip">Multicast IP Address</string>
    <string name="pref_default_multicast_ip">224.5.6.7</string>

</resources>
